--- a/app.css
+++ b/app.css
@@ -25,3 +25,37 @@
 .guess input {
     width: 100px;
 }
+.keyboard {
+    margin: 0;
+    padding: 10px;
+    list-style: none;
+    width: 500;
+}
+li.keyletter {
+    float: left;
+    margin: 0 5px 5px 0;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background: #fff;
+    border: 2px solid #a9a9a9;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+li.spacer {
+    float: left;
+    margin: 0 5px 5px 0;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background: #fff;
+    border: 2px solid #FFFFFF;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+.lastitem {
+}
