--- a/app.css
+++ b/app.css
@@ -1,8 +1,14 @@
 
 body {
+    width: 100%;
+    height: 100%;
+}
+
+#root {
     display: flex;
     justify-content: center;
     height: 100%;
+
 }
 
 .game-wrapper {
@@ -16,22 +22,30 @@ body {
 
 .board__row {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 3fr
+    grid-template-columns: 3fr 1fr;
+    column-gap: 5px;
 }
 
 .board__row_cells {
     display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr
 }
 
 .board_row_guess {
     aspect-ratio: 1/1;
     background-color: #FFFFFF;
     border-width: 1px;
-    border-color: #000000;
+    border-color: #AAAAAA;
     border-style: solid;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .board_row_guess p {
+    font-family: Arial;
+    font-size:  20pt;
+    font-weight: bold;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -47,7 +61,8 @@ body {
 }
 
 .board__row_score {
-    border: 1px solid black;
+    border: 1px solid #AAAAAA;
+    grid-gap:2px;
 }
 
 .keyboard {
@@ -68,7 +83,7 @@ body {
     font-family: arial;
     font-weight: bold;
     margin-top: 2px;
-    border: 1px black solid;
+    border: 1px #AAAAAA solid;
     aspect-ratio: 6/6;
     border-radius: 4px;
     display: flex;
