--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+#root {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.game-wrapper {
+    height: 100%;
+    aspect-ratio: 9/16;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.board {
+    width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.board__row {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    column-gap: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.board__row_cells {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.board_row_guess {
+    aspect-ratio: 1/1;
+    background-color: #FFFFFF;
+    border-width: 1px;
+    border-color: #AAAAAA;
+    border-style: solid;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.board_row_guess p {
+    font-family: Arial;
+    font-size:  20pt;
+    font-weight: bold;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.board_row_background {
+    aspect-ratio: 1/1;
+    background-color: #AAAAAA;
+    border-width: 1px;
+    border-color: #AAAAAA;
+    border-style: solid;
+}
+
+.board__row_score {
+    border: 1px solid #AAAAAA;
+    grid-gap:2px;
+}
+
+.keyboard {
+    padding-top: 2%;
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.keyboard__row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.keyboard__row__key {
+    font-family: arial;
+    font-weight: bold;
+    margin-top: 2px;
+    border: 1px #AAAAAA solid;
+    aspect-ratio: 6/6;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10%;
 }
