--- a/app.css
+++ b/app.css
@@ -1,3 +1,6 @@
+html {
+    height: 100%;
+}
 
 body {
     width: 100%;
@@ -92,3 +95,20 @@ body {
     width: 10%;
 }
 
+.end_game_modal_backdrop {
+    position: fixed;
+    top: 0vh;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background: rgba(0,0,0,0.75);
+}
+.end_game_modal {
+    position: fixed;
+    top: 30vh;
+    left: 10%;
+    width: 80%;
+    z-index: 100;
+    overflow: hidden;
+}
