--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,27 @@
     justify-content: center;
     width: 10%;
 }
+
+.end_game_modal_backdrop {
+    position: fixed;
+    top: 0vh;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background: rgba(0,0,0,0.75);
+}
+.end_game_modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    overflow: hidden;
+    font-family: arial;
+    font-weight: bold;
+    font-size:  28pt;
+    color: white;
+}
